--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             </nav>
         </header>
         <main class="main">
-            <section id="faq" class="slider">
-                <div class="slider__container">
-                    <div class="slider__wrapper">
-                        <img class="slide" src="./img/slider01.jpg" alt="" />
+            <section id="faq" class="my-slider">
+                <div>
+                    <div>
+                        <img src="./img/slider01.jpg" alt="" />
+                        <img src="./img/slider02.jpg" alt="" />
+                        <img src="./img/slider03.jpg" alt="" />
                     </div>
-                    <button type="button" class="slider__btn-left"></button>
-                    <button type="button" class="slider__btn-right"></button>
                 </div>
             </section>
             <section id="wallet" class="cards">
