change adress img

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="header__container container">
                 <img
                     class="header__logo logo"
-                    src="/assets/logo-color-McMBu2nR.png"
+                    src="./assets/logo-color-McMBu2nR.png"
                     alt="logo"
                 />
                 <h1 class="header__title">
@@ -33,9 +33,9 @@
             <section id="faq" class="my-slider">
                 <div>
                     <div>
-                        <img loading="lazy" src="/assets/slider01-oxfrP0QR.jpg" alt="" />
-                        <img loading="lazy" src="/assets/slider02-aBYQdPqq.jpg" alt="" />
-                        <img loading="lazy" src="/assets/slider03-PCWnOHoE.jpg" alt="" />
+                        <img loading="lazy" src="./assets/slider01-oxfrP0QR.jpg" alt="" />
+                        <img loading="lazy" src="./assets/slider02-aBYQdPqq.jpg" alt="" />
+                        <img loading="lazy" src="./assets/slider03-PCWnOHoE.jpg" alt="" />
                     </div>
                 </div>
             </section>
@@ -131,7 +131,7 @@
                 <div class="container footer__container">
                     <img
                         class="logo footer__logo"
-                        src="/assets/logo-color-McMBu2nR.png"
+                        src="./assets/logo-color-McMBu2nR.png"
                         alt="logo"
                     />
                     <div class="footer__icons">
