little change form and header__menu

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <section id="faq" class="my-slider">
                 <div>
                     <div>
-                        <img loading="lazy" src="./img/slider01.jpg" alt="" />
-                        <img loading="lazy" src="./img/slider02.jpg" alt="" />
-                        <img loading="lazy" src="./img/slider03.jpg" alt="" />
+                        <img src="./img/slider01.jpg" alt="" />
+                        <img src="./img/slider02.jpg" alt="" />
+                        <img src="./img/slider03.jpg" alt="" />
                     </div>
                 </div>
             </section>
