--- a/index.html
+++ b/index.html
@@ -40,61 +40,7 @@
                 </div>
             </section>
             <section id="wallet" class="cards">
-                <div class="cards__container container">
-                    <article class="card card--wallet">
-                        <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 512 512"
-                        >
-                            <path
-                                d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V192c0-35.3-28.7-64-64-64H80c-8.8 0-16-7.2-16-16s7.2-16 16-16H448c17.7 0 32-14.3 32-32s-14.3-32-32-32H64zM416 272a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"
-                            />
-                        </svg>
-                        <h2>Din wallet</h2>
-                        <p>Din personlige portfolio</p>
-                    </article>
-                    <article class="card card--valuta">
-                        <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            fill="white"
-                            viewBox="0 0 16 16"
-                        >
-                            <path
-                                d="M4 9.42h1.063C5.4 12.323 7.317 14 10.34 14c.622 0 1.167-.068 1.659-.185v-1.3c-.484.119-1.045.17-1.659.17-2.1 0-3.455-1.198-3.775-3.264h4.017v-.928H6.497v-.936c0-.11 0-.219.008-.329h4.078v-.927H6.618c.388-1.898 1.719-2.985 3.723-2.985.614 0 1.175.05 1.659.177V2.194A6.617 6.617 0 0 0 10.341 2c-2.928 0-4.82 1.569-5.244 4.3H4v.928h1.01v1.265H4v.928z"
-                            />
-                        </svg>
-                        <h2>Køb valuta</h2>
-                        <p>Følg markedet på forskellige valuta</p>
-                    </article>
-                    <article class="card card--crypto">
-                        <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            fill="white"
-                            viewBox="0 0 16 16"
-                        >
-                            <path
-                                d="M5.5 13v1.25c0 .138.112.25.25.25h1a.25.25 0 0 0 .25-.25V13h.5v1.25c0 .138.112.25.25.25h1a.25.25 0 0 0 .25-.25V13h.084c1.992 0 3.416-1.033 3.416-2.82 0-1.502-1.007-2.323-2.186-2.44v-.088c.97-.242 1.683-.974 1.683-2.19C11.997 3.93 10.847 3 9.092 3H9V1.75a.25.25 0 0 0-.25-.25h-1a.25.25 0 0 0-.25.25V3h-.573V1.75a.25.25 0 0 0-.25-.25H5.75a.25.25 0 0 0-.25.25V3l-1.998.011a.25.25 0 0 0-.25.25v.989c0 .137.11.25.248.25l.755-.005a.75.75 0 0 1 .745.75v5.505a.75.75 0 0 1-.75.75l-.748.011a.25.25 0 0 0-.25.25v1c0 .138.112.25.25.25L5.5 13zm1.427-8.513h1.719c.906 0 1.438.498 1.438 1.312 0 .871-.575 1.362-1.877 1.362h-1.28V4.487zm0 4.051h1.84c1.137 0 1.756.58 1.756 1.524 0 .953-.626 1.45-2.158 1.45H6.927V8.539z"
-                            />
-                        </svg>
-                        <h2>Køb crypto</h2>
-                        <p>Invest i dagens højeste kurs</p>
-                    </article>
-                    <article class="card card--kurser">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="white">
-                            <g>
-                                <title>Layer 1</title>
-                                <path
-                                    stroke="null"
-                                    fill-rule="evenodd"
-                                    d="m0,0l0.14894,-0.25532l-0.17021,16.53191l16.2766,-0.08511l-0.25532,-0.19149l-16,0l0,-16zm10,3.5a0.5,0.5 0 0 1 0.5,-0.5l4,0a0.5,0.5 0 0 1 0.5,0.5l0,4a0.5,0.5 0 0 1 -1,0l0,-2.6l-3.613,4.417a0.5,0.5 0 0 1 -0.74,0.037l-2.587,-2.587l-3.656,5.027a0.5,0.5 0 0 1 -0.808,-0.588l4,-5.5a0.5,0.5 0 0 1 0.758,-0.06l2.609,2.61l3.482,-4.256l-2.945,0a0.5,0.5 0 0 1 -0.5,-0.5z"
-                                    id="svg_1"
-                                />
-                            </g>
-                        </svg>
-                        <h2>Se kurser</h2>
-                        <p>Følg kurserne på markedets coins</p>
-                    </article>
-                </div>
+                <div class="cards__container container"></div>
             </section>
             <section class="form">
                 <div class="container">
