--- a/index.html
+++ b/index.html
@@ -32,11 +32,8 @@
         <main class="main">
             <section id="faq" class="my-slider">
                 <div>
-                    <div>
-                        <img src="./img/slider01.jpg" alt="" />
-                        <img src="./img/slider02.jpg" alt="" />
-                        <img src="./img/slider03.jpg" alt="" />
-                    </div>
+                    <span class="slideNummer"></span>
+                    <div></div>
                 </div>
             </section>
             <section id="wallet" class="cards">
